<resources>
    <string name="app_name">Manage Payments</string>
    <string name="key_sign_up_label">Sign Up</string>
    <string name="key_login_label">Login</string>
    <string name="key_username_label">Username</string>
    <string name="key_password_label">Password</string>
    <string name="key_forgot_password_pin_hint">Forgot Password PIN</string>
    <string name="key_pin_label">PIN</string>
    <string name="key_keep_sign_in_label">Keep me Signed in</string>
    <string name="key_ok_label">OK</string>
    <string name="key_cancel_label">Cancel</string>
    <string name="key_biometrics_label">Biometrics</string>
    <string name="key_enable_biometrics_label">Do you want to enable biometrics?</string>
    <string name="key_biometric_authentication_title">Biometric Authentication</string>
    <string name="key_biometric_authentication_message">Use your Biometrics</string>
    <string name="key_wrong_credentials_message">Login credentials are wrong\nPlease try again</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="key_profile_label">Profile</string>
    <string name="key_empty_field_label">N/A</string>
    <string name="key_logout_label">Logout</string>
    <string name="key_logout_message">Do you want to logout?</string>
    <string name="key_home_label">Home</string>
    <string name="key_view_edit_profile_label">View, edit profile &amp; payment settings</string>
    <string name="key_change_profile_picture_label">Profile Picture</string>
    <string name="key_no_changes_message">You have not made any changes…</string>
    <string name="key_add_label">Add</string>
    <string name="key_add_group_label">Add Group</string>
    <string name="key_modify_group">Modify Group</string>
    <string name="key_group_name_label">Group name</string>
    <string name="key_no_clients_title_message">No clients added</string>
    <string name="key_no_clients_message">Click \'+\' to add a Group and then click on each one to add Clients</string>
    <string name="key_no_results_found_value">No results found with \'%s\'</string>
    <string name="key_search">Search</string>
    <string name="key_client_info_label">Client Info</string>
    <string name="key_first_name_label">First Name</string>
    <string name="key_surname_label">Surname</string>
    <string name="key_phone_label">Phone</string>
    <string name="key_parent_name_label">Parent Name</string>
    <string name="key_parent_phone_label">Parent Phone</string>
    <string name="key_email_label">Email</string>
    <string name="key_group_label">Group</string>
    <string name="key_is_active_label">Is Active</string>
    <string name="key_is_free_label">Is Free</string>
    <string name="key_send_message_label">Send Message</string>
    <string name="key_payments_label">Payments</string>
    <string name="key_amount_label">Amount</string>
    <string name="key_start_date_label">Start Date</string>
    <string name="key_execution_date_label">Payment Date</string>
    <string name="key_end_date_label">End Date</string>
    <string name="key_skip_payment_label">Skip Payment</string>
    <string name="key_note_label">Note</string>
    <string name="key_add_payment_label">Add Payment</string>
    <string name="key_select_group_label">Select Group</string>
    <string name="key_search_in_payments_label">Search in payments</string>
    <string name="key_add_payment_message">Add at least one payment first…</string>
    <string name="key_warning_label">Warning</string>
    <string name="key_delete_client_message">Do you want to delete this client?</string>
    <string name="key_delete_payment_message">Do you want to delete this payment?</string>
    <string name="key_delete_group_message_value">Do you want to delete %s and its payments?</string>
    <string name="key_delete_label">Delete</string>
    <string name="key_import_label">Import</string>
    <string name="key_export_database_label">Export Database</string>
    <string name="key_main_label">Main</string>
    <string name="key_options_label">Options</string>
    <string name="key_export_message">This operation will export your database and save it where you want. Do you want to proceed?</string>
    <string name="key_import_message">This operation is going to overwrite your current data with the data of the imported file. Are you sure?</string>
    <string name="key_proceed_label">Proceed</string>
    <string name="key_invalid_database_file_message">Invalid database file\nSelect another File</string>
    <string name="key_database_successfully_imported_message">Database is updated</string>
    <string name="key_invoices_label">Invoices</string>
    <string name="key_this_month_label">THIS MONTH</string>
    <string name="key_no_files_title_message">There are no files at this time</string>
    <string name="key_no_files_message">Navigate to home &amp; swipe group or client to create an Invoice</string>
    <string name="key_search_in_invoices_label">Search in invoices</string>
    <string name="key_yes_label">YES</string>
    <string name="key_no_label">NO</string>
    <string name="key_file_saved_message">Invoice created successfully. Navigate on the \"Invoices\" option to see the list of invoices</string>
    <string name="key_delete_selected_invoices_message">Do you want to delete the selected invoices?</string>
    <string name="key_total_payments_label">Total Payments</string>
    <string name="key_file_not_exists_message">It seems that this invoice does not exist. Recreate it by navigating to home &amp; swipe a client to left.</string>
    <string name="key_address_label">Address</string>
    <string name="key_id_card_number_label">ID Number</string>
    <string name="key_social_insurance_number_label">Social Insurance Number</string>
    <string name="key_invoice_number_label">Invoice No.</string>
    <string name="key_select_option_label">Select an option</string>
    <string name="key_select_user_from_backup_label">Select a User</string>
    <string name="key_license_expired_message">Your license has been expired. Please contact with the developers…</string>
    <string name="key_payment_month_label">Payment Month</string>
    <string name="key_total_amount_value_label">💶 Total %s</string>
    <string name="key_vat_percent_label">VAT(%)</string>
    <string name="key_vat_value_count_message">%s VAT should be counted here</string>
    <string name="key_payment_month_amount_value_label">%1$s payment %2$s</string>
    <string name="key_vat_amount_value_label">🧾 VAT %1$s %2$s</string>
    <string name="key_summary_label">Summary</string>
    <string name="key_amount_without_vat_label">Amount without VAT</string>
    <string name="key_single_payment_label">Single Payment</string>
    <string name="key_contact_share_message_label">Contact &amp; Share Message</string>
    <string name="key_share_message_template_hint">Message template to share</string>
    <string name="key_free_label">FREE</string>
    <string name="key_inactive_label">Inactive</string>
    <string name="key_clear_all_clients_label">Clear All Clients</string>
    <string name="key_clear_all_payments_message">This operation will delete all the payments you have registered except the groups. Do you want to proceed?</string>
    <string name="key_clear_label">Clear</string>
    <string name="key_saved_users_label">Saved Users</string>
    <string name="key_personal_information_label">Personal Information</string>
    <string name="key_payment_setting_label">Payment Settings</string>
    <string name="key_default_payment_amount_label">Default payment amount</string>
    <string name="key_payment_type_label">Payment Type</string>
    <string name="key_export_payments_to_csv_and_invoice_label">Export Invoice/CSV</string>
    <string name="key_filter_period_label">Period Filter</string>
    <string name="key_minimum_payment_month_label">Start Date</string>
    <string name="key_maximum_payment_month_label">End Date</string>
    <string name="key_scv_created_successfully">File saved successfully!</string>
    <string name="key_from_label">From</string>
    <string name="key_to_label">To</string>
    <string name="key_manage_payments_label">Manage Payments</string>
    <string name="key_good_morning_label">Good Morning!</string>
    <string name="key_good_afternoon_label">Good Afternoon!</string>
    <string name="key_good_evening_label">Good Evening!</string>
    <string name="key_payment_date_notification_label">Notify me on Payment Date</string>
    <string name="key_payments_notifications_channel">Payments Notifications</string>
    <string name="key_payment_date_notification_not_able_to_cancel_message">*Please note that you cannot cancel the notification for the current payment if you have already enabled it, unless you don\'t save it.</string>
    <string name="key_notification_amount_value">💶 %s</string>
    <string name="key_calendar_event_amount_value"> 💶 %s</string>
    <string name="key_default_message_template_label">Default message template</string>
    <string name="key_default_message_template_value">Thank you for your payment!</string>
    <string name="key_sms_label">SMS</string>
    <string name="key_send_sms_message">Do you want to send your message to the client?</string>
    <string name="key_send_label">Send</string>
    <string name="key_invoice_label">Invoice</string>
    <string name="key_total_price_label">Total Price</string>
    <string name="key_subtotal_label">Subtotal</string>
    <string name="key_vat_label">Vat</string>
    <string name="key_history_label">History</string>
    <string name="key_forgot_password_label">Forgot password?</string>
    <string name="key_new_password_hint">New password</string>
    <string name="key_repeat_new_password_hint">Repeat new password</string>
    <string name="key_change_password_label">Change Password</string>
    <string name="key_invalid_pin_message">Invalid PIN</string>
    <string name="key_password_changed_successfully_message">Your password has been changed!</string>
    <string name="key_delete_user_label">Delete User</string>
    <string name="key_delete_user_message">This operation will remove all data are saved in the current user. Do you want to proceed?</string>
    <string name="key_select_from_contact_label">Select from contact</string>
    <string name="key_select_currency_label">Select Currency</string>
    <string name="key_payment_date_notification_warning_message">Notifications must me set on a future Payment Date!</string>
    <string name="key_offline_login_label">Offline Login</string>
    <string name="key_create_user_guide_message">
        <![CDATA[
            <ul>
                <li>Create multiple users offline</li>
                <li>Add your authentication method(<b>biometrics</b> or <b>password</b>)</li>
                <li>Add Profile Image</li>
                <li>Manage your payments</li>
            </ul>
        ]]>
    </string>
    <string name="key_payments_grouped_guide_message">
        <![CDATA[
            <ul>
                <li>Add colorful or groups with image</li>
                <li>Watch your payments by group name alphabetically</li>
                <li>Swipe left to create a client\'s invoice - Swipe right to delete</li>
                <li>Make a long click and delete, contact and export invoice of the selected clients</li>
            </ul>
        ]]>
    </string>
    <string name="key_your_client_label">Your Client</string>
    <string name="key_select_country_label">Select country</string>
    <string name="key_search_in_countries_label">Search in Countries</string>
</resources>