<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="com.agelousis.monthlyfees.utils.extensions.ExtensionsKt" />
        <variable
            name="paymentAmountModel"
            type="com.agelousis.monthlyfees.main.ui.payments.models.PaymentAmountModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.agelousis.monthlyfees.views.personDetailsLayout.PersonDetailsLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                personDetails="@{ExtensionsKt.getEuroFormattedString(paymentAmountModel.paymentAmount)}"
                app:fieldType="NUMBER"
                app:imeOptionType="actionDone"
                app:label="@string/key_amount_label"
                app:showLine="true"/>

            <com.agelousis.monthlyfees.views.personDetailsLayout.PersonDetailsLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                personDetails="@{paymentAmountModel.paymentDate}"
                app:fieldType="TEXT"
                app:imeOptionType="actionDone"
                app:label="@string/key_date_label"
                app:showLine="true"/>

            <com.agelousis.monthlyfees.views.detailsSwitch.DetailsAppSwitch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                appSwitchIsChecked="@{paymentAmountModel.skipPayment}"
                app:appSwitchLabel="@string/key_skip_payment_label"
                app:appSwitchShowLine="true" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/key_note_label"
                app:hintEnabled="true"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordField"
                    style="@style/TextViewTitleLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage"
                    android:text="@{paymentAmountModel.paymentNote}"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>